# gl-reconciliation

./: .gitignore  azure-pipelines.yml
api/: .dockerignore  Dockerfile  GLRecon.slnx  coverlet.runsettings
api/src/GLRecon.Api/: GLRecon.Api.csproj  GLRecon.Api.http  Program.cs  appsettings.json
api/src/GLRecon.Api/Endpoints/: EngagementEndpoints.cs
api/src/GLRecon.Api/Models/: Requests.cs  Responses.cs
api/src/GLRecon.Api/Services/: CsvParser.cs  IServiceBusPublisher.cs  ServiceBusPublisher.cs
api/src/GLRecon.Domain/: Class1.cs
api/src/GLRecon.Domain/Entities/: BankTransaction.cs  Engagement.cs  GLEntry.cs  ReconciliationMatch.cs  ReconciliationResult.cs
api/src/GLRecon.Domain/Enums/: EngagementStatus.cs  GLCategory.cs  ReconciliationStatus.cs
api/src/GLRecon.Domain/Repositories/: IBankTransactionRepository.cs  IEngagementRepository.cs  IGLEntryRepository.cs  IReconciliationRepository.cs
api/src/GLRecon.Infrastructure/: Class1.cs  GLRecon.Infrastructure.csproj
api/src/GLRecon.Infrastructure/Persistence/: AppDbContext.cs
api/tests/GLRecon.Domain.Tests/: GLRecon.Domain.Tests.csproj
api/tests/GLRecon.Domain.Tests/Entities/: BankTransactionTests.cs  EngagementTests.cs  GLEntryTests.cs  ReconciliationMatchTests.cs  ReconciliationResultTests.cs
frontend/: package-lock.json  package.json
infra/: .terraform.lock.hcl  container_apps.tf  cosmos.tf  database.tf  keyvault.tf  locals.tf  main.tf  monitoring.tf  openai.tf  outputs.tf  pipelines.tf  providers.tf  registry.tf  servicebus.tf  terraform.tfvars.example  variables.tf
worker/: pyproject.toml
(+10 files in other folders)
