[project]
name = "worker"
version = "0.1.0"
description = ""
authors = [
    {name = "Jake Currie",email = "jake@cashio.ai"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "azure-servicebus (>=7.14.3,<8.0.0)",
    "openai (>=2.31.0,<3.0.0)",
    "pydantic (>=2.13.0,<3.0.0)"
]


[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
